# docker-registry-janitor

./: .gitignore  Cargo.toml
src/: main.rs
