[package]
name = "docker-registry-janitor"
version = "0.1.0"
authors = ["Andrey Elagin <daddyingrave@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.114", features = ["derive"] }